# cpp_lab9

./: CMakeLists.txt
src/: main.cpp
